--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     #game {
       font-family: 'Open Sans', sans-serif;
-      background: url('/farm/bg.png');
+      background: url('farm/bg.png');
       width: 100%;
       height: 100%;
       position: relative;
@@ -39,7 +39,7 @@
       margin: auto;
       left: 0; right: 0;
       top: 34px;
-      background: url(/farm/logo.png);
+      background: url('farm/logo.png');
       width: 348px;
       height: 98px;
       z-index: 5;
@@ -48,14 +48,14 @@
     #startLine {
       position: absolute;
       left: 20px;
-      background: url(/farm/start.png);
+      background: url('farm/start.png');
       width: 162px;
       height: 40px;
       bottom: 182px;
     }
 
     #combain {
-      background: url(/farm/combain.png);
+      background: url('farm/combain.png');
       height: 130px;
       margin-top: -65px;
 
@@ -66,7 +66,7 @@
     }
 
     #combainShadow {
-      background: url(/farm/combainShadow.png);
+      background: url('farm/combainShadow.png');
       height: 148px;
       margin-top: -74px;
 
@@ -84,7 +84,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background: url('/farm/trees.png') no-repeat center center;
+      background: url('farm/trees.png') no-repeat center center;
     }
 
     #score {
@@ -187,7 +187,7 @@
     .pi_im1 {
       display: inline-block;
       vertical-align: bottom;
-      background: url('/farm/i-arrows.png');
+      background: url('farm/i-arrows.png');
 
       width: 148px;
       height: 98px;
@@ -197,7 +197,7 @@
     .pi_im2 {
       display: inline-block;
       vertical-align: middle;
-      background: url('/farm/i-timer.png');
+      background: url('farm/i-timer.png');
 
       width: 118px;
       height: 58px;
@@ -207,7 +207,7 @@
     .pi_im3 {
       display: inline-block;
       vertical-align: middle;
-      background: url('/farm/i-field.png');
+      background: url('farm/i-field.png');
 
       width: 118px;
       height: 58px;
