--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Design Village Game - 2016</title>
+
+    <title>Design Village Game</title>
+    <meta name="description" content="Керуй своїм трактором">
+    <meta name="author" content="co-authored by Rostyslav Diachok and Yuriy Syvak">
 
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://promo.designvillage.com.ua/farm/fb_im.png">
-    <meta property="og:title" content="Design Village Game - 2016">
-    <meta property="og:url" content="http://promo.designvillage.com.ua">
+    <meta property="og:image" content="https://promo.designvillage.com.ua/assets/fb_im.png">
+    <meta property="og:title" content="Design Village Game">
+    <meta property="og:description" content="Керуй своїм трактором">
+    <meta property="og:url" content="https://promo.designvillage.com.ua">
+    <meta property="fb:app_id" content="341125149583994">
 
     <style>
     body { margin: 0; }
@@ -28,7 +33,7 @@
     }
     #game {
       font-family: 'Open Sans', sans-serif;
-      background: url('farm/bg.png');
+      background: url('assets/bg.png');
       width: 100%;
       height: 100%;
       position: relative;
@@ -39,7 +44,7 @@
       margin: auto;
       left: 0; right: 0;
       top: 34px;
-      background: url('farm/logo.png');
+      background: url('assets/logo.png');
       width: 348px;
       height: 98px;
       z-index: 5;
@@ -48,14 +53,14 @@
     #startLine {
       position: absolute;
       left: 20px;
-      background: url('farm/start.png');
+      background: url('assets/start.png');
       width: 162px;
       height: 40px;
       bottom: 182px;
     }
 
     #combain {
-      background: url('farm/combain.png');
+      background: url('assets/combain.png');
       height: 130px;
       margin-top: -65px;
 
@@ -66,7 +71,7 @@
     }
 
     #combainShadow {
-      background: url('farm/combainShadow.png');
+      background: url('assets/combainShadow.png');
       height: 148px;
       margin-top: -74px;
 
@@ -84,7 +89,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background: url('farm/trees.png') no-repeat center center;
+      background: url('assets/trees.png') no-repeat center center;
     }
 
     #score {
@@ -141,8 +146,6 @@
       background-color:  #3b5998;
     }
 
-
-
     .popup {
       display: none;
       width: 100%;
@@ -151,7 +154,6 @@
       z-index: 3;
       background: rgba(0,0,0, 0.7);
     }
-
 
     .p_result_header{
       color:  #ffffff;
@@ -187,7 +189,7 @@
     .pi_im1 {
       display: inline-block;
       vertical-align: bottom;
-      background: url('farm/i-arrows.png');
+      background: url('assets/i-arrows.png');
 
       width: 148px;
       height: 98px;
@@ -197,7 +199,7 @@
     .pi_im2 {
       display: inline-block;
       vertical-align: middle;
-      background: url('farm/i-timer.png');
+      background: url('assets/i-timer.png');
 
       width: 118px;
       height: 58px;
@@ -207,7 +209,7 @@
     .pi_im3 {
       display: inline-block;
       vertical-align: middle;
-      background: url('farm/i-field.png');
+      background: url('assets/i-field.png');
 
       width: 118px;
       height: 58px;
@@ -225,8 +227,6 @@
     .js-instruction-popup {
       display: block;
     }
-
-
     </style>
 </head>
 <body>
